--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1791,8 +1791,12 @@
 		color: #1e1f23;
 	}
 
-	h1, h2, h3, h4, h5, h6 {
+	h2 {
 		color: #1e1f23;
+	}
+
+	h1, h3, h4, h5, h6 {
+		color: rgba(255, 255, 255, 0.75);
 	}
 
 	blockquote {
@@ -2653,6 +2657,7 @@
 		-webkit-align-items: center;
 		-ms-align-items: center;
 		align-items: center;
+
 	}
 
 		.spotlight > * {
@@ -2664,6 +2669,7 @@
 			-webkit-flex-grow: 0;
 			-ms-flex-grow: 0;
 			flex-grow: 0;
+
 		}
 
 		.spotlight > * {
@@ -2676,6 +2682,7 @@
 
 		.spotlight .inner {
 			padding: 6rem;
+			color: white;
 		}
 
 		.spotlight .image {
@@ -2687,7 +2694,7 @@
 			}
 
 		.spotlight.alt {
-			background: #1e1f23;
+			background: rgba(0, 0, 0, 0.300);
 			color: rgba(255, 255, 255, 0.25);
 			display: -moz-flex;
 			display: -webkit-flex;
@@ -2730,6 +2737,7 @@
 
 			.spotlight .inner {
 				padding: 4rem;
+/* color: white; */
 			}
 
 		}
@@ -3004,10 +3012,13 @@
 		width: 80rem;
 		max-width: 90%;
 		margin-bottom: 2rem;
-		background: rgba(255, 255, 255, 0.95);
-		-webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.75);
-		-moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.75);
-		box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.75);
+		background: rgba(0, 0, 0, 0.300);
+		color: rgba(255, 255, 255, 0.95);
+		/* background: rgba(255, 255, 255, 0.95); */
+		/* -webkit-box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.95); */
+		/* -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.75); */
+		/* -moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.75); */
+		/* box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.75); */
 		border-radius: 4px;
 	}
 
